tests/baselines/reference/parserComputedPropertyName15.errors.txt
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName15.ts(1,31): error TS1170: Computed property names are not allowed in type literals.
tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName15.ts(1,32): error TS2304: Cannot find name 'e'.


==== tests/cases/conformance/parser/ecmascript6/ComputedPropertyNames/parserComputedPropertyName15.ts (2 errors) ====
    var v: { [e: number]: string; [e]: number };
                                  ~~~
!!! error TS1170: Computed property names are not allowed in type literals.
                                   ~
!!! error TS2304: Cannot find name 'e'.